--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss-import": "^14.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "resolve-url-loader": "^4.0.0",
     "sass": "^1.45.1",
     "sass-loader": "^12.4.0",
     "tailwindcss": "^3.0.7"
