--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{yml,yaml,js,json,vue,html,php,babelrc}]
+[*.{yml,yaml,js,json,vue,babelrc}]
 indent_size = 2
 
 [docker-compose.yml]
