--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postcss-import": "^14.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lorem-ipsum": "^1.4.9",
     "resolve-url-loader": "^4.0.0",
     "sass": "^1.45.1",
     "sass-loader": "^12.4.0",
